--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.scss
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.scss
@@ -16,13 +16,10 @@ mat-sidenav {
 
 .content {
   border-radius: 10px;
-  margin: 16px;
-  margin-left: 32px;
-
-  display: flex;
+  margin: 5%;
+  margin-left: 5%;
   justify-content: center;
   align-items: center;
-
   font-size: 2rem;
   color: lightgray;
 }
