--- a/restaurant-front/src/modules/waiter/components/customize-ordered-item/customize-ordered-item.component.scss
+++ b/restaurant-front/src/modules/waiter/components/customize-ordered-item/customize-ordered-item.component.scss
@@ -48,7 +48,9 @@
   z-index: 200;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   margin-top: 10px;
   color: white;
 }
@@ -143,8 +145,6 @@ mat-selection-list {
   color: #b3b3b3;
 }
 
-
 ::ng-deep .mat-select-value {
   color: #fafafa !important;
 }
-
