--- a/restaurant-front/src/modules/chef/pages/chef-dashboard/chef-dashboard.component.html
+++ b/restaurant-front/src/modules/chef/pages/chef-dashboard/chef-dashboard.component.html
@@ -50,13 +50,13 @@
     <mat-divider></mat-divider>
 
     <mat-action-list>
-        <mat-list-item (click)="this.state=1"
+        <mat-list-item (click)="this.state=1" id="dish-table"
         >Dish card</mat-list-item
       >
-      <mat-list-item (click)="this.state=5"
+      <mat-list-item (click)="this.state=5" id="list-new-orders-fild"
         >New orderes</mat-list-item
       >
-      <mat-list-item (click)="this.state=4"
+      <mat-list-item (click)="this.state=4" id="list-acc-orders-fild"
         >Accepted orders</mat-list-item
       >
     </mat-action-list>
@@ -93,7 +93,7 @@
               </ng-container>
             </ng-container>
           </div>
-          <mat-paginator
+          <mat-paginator *ngIf="this.state!==1"
             [length]="data2.length"
             [pageSize]="pageSize"
             [pageIndex]="currentPage"
