--- a/restaurant-front/src/modules/shared/components/list-accepted-orders/list-accepted-orders.component.html
+++ b/restaurant-front/src/modules/shared/components/list-accepted-orders/list-accepted-orders.component.html
@@ -1,13 +1,17 @@
 <div id="container-div">
-<mat-list  *ngFor="let order of observable | async">
-    <mat-card  class="example-card" (click) = onClick(this.order.id)>
-        <mat-card-header>
-            <mat-card-title> Order number: {{ this.order.id}} </mat-card-title>
-            <mat-card-title> Table number: {{ this.order.tableId}} </mat-card-title>
-        </mat-card-header>
-    </mat-card>
-
-</mat-list>
-<br/>
-<div *ngIf = "this.dataSource.data.length == 0">There is no accepted orders</div>
-</div>
+    <mat-list  *ngFor="let order of observable | async">
+        <mat-card  class="example-card" (click) = onClick(this.order.id)>
+            <mat-card-header>
+                <mat-card-title id = "title{{this.order.id}}"> Order number: {{ this.order.id}} </mat-card-title>
+                <mat-card-title> Table number: {{ this.order.tableId}} </mat-card-title>
+            </mat-card-header>
+        </mat-card>
+    
+    </mat-list>
+    
+    <br/>
+    <div *ngIf = "this.dataSource.data.length == 0">There is no accepted orders</div>
+    <!-- <mat-paginator style="position:bottom;" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator> -->
+    </div>
+    
+    
