--- a/restaurant-front/src/modules/waiter/components/select-menu-items/select-menu-items.component.html
+++ b/restaurant-front/src/modules/waiter/components/select-menu-items/select-menu-items.component.html
@@ -11,12 +11,14 @@
           placeholder="Search..."
           #searchInputField
           [value]="searchInput"
+          class="searchInput"
         />
       </mat-form-field>
       <button
         mat-fab
         class="dugmic-search"
         (click)="onSearchClicked(searchInputField.value)"
+        name="searchBttn"
       >
         <mat-icon>search</mat-icon>
       </button>
@@ -29,6 +31,7 @@
               class="dugmic-item"
               name="menuItem"
               *ngFor="let item of menuItems"
+              name="menuItem"
             >
               {{ item.name }}
             </button>
@@ -43,6 +46,7 @@
               mat-button
               class="dugmic-item"
               (click)="onFilterClick('dish')"
+              name=dish
             >
               <mat-icon> fastfood</mat-icon> Dishes
             </button>
@@ -50,6 +54,7 @@
               mat-button
               class="dugmic-item"
               (click)="onFilterClick('drink')"
+              name="drink"
             >
               <mat-icon>free_breakfast</mat-icon> Drinks
             </button>
@@ -63,6 +68,7 @@
                   class="dugmic-item"
                   *ngFor="let item of dishTypes"
                   (click)="onFilterClick(item)"
+                  name="dishType"
                 >
                   {{ editGroupName(item) }}
                 </button>
@@ -71,7 +77,7 @@
                 <button
                   mat-button
                   class="dugmic-item"
-                  name="menuItem"
+                  name="drinkType"
                   *ngFor="let item of drinkTypes"
                   (click)="onFilterClick(item)"
                 >
