fixed add employee e2e test

--- a/restaurant-front/src/modules/shared/components/employees/employees.component.html
+++ b/restaurant-front/src/modules/shared/components/employees/employees.component.html
@@ -56,7 +56,7 @@
       >
         Username
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.username }}</td>
+      <td mat-cell name="username" *matCellDef="let element">{{ element.username }}</td>
     </ng-container>
 
     <!-- Name Column -->
