--- a/restaurant-front/src/modules/shared/components/employees/employees.component.html
+++ b/restaurant-front/src/modules/shared/components/employees/employees.component.html
@@ -69,7 +69,7 @@
       >
         Name
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <td mat-cell *matCellDef="let element" name="name">{{ element.name }}</td>
     </ng-container>
 
     <!-- Surname Column -->
@@ -82,7 +82,7 @@
       >
         Surname
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.surname }}</td>
+      <td mat-cell *matCellDef="let element" name="surname">{{ element.surname }}</td>
     </ng-container>
 
     <!-- Telephone Column -->
@@ -95,7 +95,7 @@
       >
         Telephone
       </th>
-      <td mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let element" name="telephone">
         {{ element.telephone }}
       </td>
     </ng-container>
