Finished e2e test for CreateOrder

--- a/restaurant-front/src/modules/waiter/components/pay-order/pay-order.component.html
+++ b/restaurant-front/src/modules/waiter/components/pay-order/pay-order.component.html
@@ -18,6 +18,7 @@
         Now
       </button>
       <button
+        id="pay-order-later-button"
         mat-flat-button
         type="button"
         color="primary"
