--- a/restaurant-front/src/modules/waiter/pages/create-order/create-order.component.html
+++ b/restaurant-front/src/modules/waiter/pages/create-order/create-order.component.html
@@ -66,14 +66,14 @@
     <mat-divider></mat-divider>
     <div class="row">
       <span style="margin-right: 50%; font-size: 1rem; ">Total cost: </span>
-      <span style="text-align: right; font-size: 1rem; "
+      <span style="text-align: right; font-size: 1rem; " id="total-order-cost"
         >$ {{ this.totalCost }}
       </span>
     </div>
 
     <mat-divider></mat-divider>
 
-    <button mat-button class="menu-button" (click)="onAdditionalNotesClicked()">
+    <button mat-button class="menu-button" (click)="onAdditionalNotesClicked()" id="additional-notes-button">
       <mat-icon>notes</mat-icon>
       <span>Additional notes</span>
     </button>
@@ -90,6 +90,7 @@
         Cancel
       </button>
       <button
+        id="confirm-create-order-button"
         mat-flat-button
         type="button"
         color="primary"
