bugfix add area

--- a/restaurant-front/src/modules/admin/pages/edit-area/edit-area.component.html
+++ b/restaurant-front/src/modules/admin/pages/edit-area/edit-area.component.html
@@ -27,7 +27,7 @@
             mat-button
             color="accent"
             type="submit"
-            class="delete-button"
+            class="delete-area-button"
             (click)="openDeleteAreaDialog(area.name, area.id)"
           >
           <mat-icon>delete</mat-icon>
