Created e2e test for EditOrder

--- a/restaurant-front/src/modules/shared/components/confirm-action/confirm-action.component.html
+++ b/restaurant-front/src/modules/shared/components/confirm-action/confirm-action.component.html
@@ -18,6 +18,7 @@
           Cancel
         </button>
         <button
+          id="confirm-action-button"
           mat-flat-button
           type="button"
           color="primary"
