--- a/restaurant-front/src/modules/waiter/components/additional-notes/additional-notes.component.html
+++ b/restaurant-front/src/modules/waiter/components/additional-notes/additional-notes.component.html
@@ -15,6 +15,7 @@
       </form>
       <div class="modal-footer">
         <button
+          id="close-additional-notes-button"
           mat-flat-button
           type="button"
           color="accent"
