--- a/restaurant-front/src/modules/waiter/components/customize-ordered-item/customize-ordered-item.component.html
+++ b/restaurant-front/src/modules/waiter/components/customize-ordered-item/customize-ordered-item.component.html
@@ -45,7 +45,7 @@
         style="background-color: rgb(0 0 0 / 0%)"
       >
         <mat-label style="color: #b3b3b3">Priority</mat-label>
-        <mat-select [value]="this.menuItemWithIngredients.priority" #priority>
+        <mat-select [value]="this.menuItemWithIngredients.priority" #priority id="mat-select-priority">
           <mat-option *ngFor="let p of priorities" [value]="p" id="priority-options">
             {{ p }}
           </mat-option>
