--- a/restaurant-front/src/modules/waiter/pages/waiter-dashboard/waiter-dashboard.component.scss
+++ b/restaurant-front/src/modules/waiter/pages/waiter-dashboard/waiter-dashboard.component.scss
@@ -122,11 +122,15 @@ mat-action-list {
 .claimedTableBttn {
   border-style: solid;
   border-color: hotpink;
+  height: 50px;
+  width: 65px;
 }
 
 .unclaimedTableBttn {
   border-style: solid;
   border-color: #424242;
+  height: 50px;
+  width: 65px;
 }
 
 .buttonsDiv {
