changed area test e2e

--- a/restaurant-front/src/modules/admin/pages/edit-area/edit-area.component.html
+++ b/restaurant-front/src/modules/admin/pages/edit-area/edit-area.component.html
@@ -19,6 +19,7 @@
           <button
             mat-button
             class="dugmic-area"
+            name="dugmic-area"
             (click)="openEditTables(area)"
           >
             {{ area.name }}
