--- a/restaurant-front/src/modules/admin/pages/edit-area/edit-area.component.html
+++ b/restaurant-front/src/modules/admin/pages/edit-area/edit-area.component.html
@@ -28,6 +28,7 @@
             mat-button
             color="accent"
             type="submit"
+            name="delete-area-button"
             class="delete-area-button"
             (click)="openDeleteAreaDialog(area.name, area.id)"
           >
@@ -61,21 +62,21 @@
         </div>
         <div class="buttonsDiv">
           <div>
-            <button mat-raised-button color="accent" class="addTableBttn" (click)="addTable()">
+            <button mat-raised-button color="accent" class="addTableBttn" name="addTableBttn" (click)="addTable()">
               <mat-icon>add</mat-icon>
               <span> Add table</span>
             </button>
           </div>
           
           <div>
-            <button mat-raised-button color="accent" class="saveBttn" (click)="saveChanges()">
+            <button mat-raised-button color="accent" class="saveBttn" name="saveTableBttn" (click)="saveChanges()">
               <mat-icon>save</mat-icon>
               <span> Save changes</span>
             </button>
           </div>
 
           <div>
-            <button mat-raised-button color="accent" class="deleteBttn" (click)="deleteTable()" [disabled]="selectedTable===-1" >
+            <button mat-raised-button color="accent" class="deleteBttn" name="deleteTableBttn" (click)="deleteTable()" [disabled]="selectedTable===-1" >
               <mat-icon>save</mat-icon>
               <span> Delete table</span>
             </button>
