--- a/restaurant-front/src/modules/manager/components/add-drink-manager/add-drink-manager.component.html
+++ b/restaurant-front/src/modules/manager/components/add-drink-manager/add-drink-manager.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title class="title">Add new drink</h2>
-<mat-dialog-content [formGroup]="addDrinkForm" style="white-space: pre-line">
-  <mat-grid-list cols="2" rowHeight="4:1">
-    <mat-grid-tile rowspan="2">
+<mat-dialog-content [formGroup]="addDrinkForm">
+  <mat-grid-list cols="2" rowHeight="3:1">
+    <mat-grid-tile rowspan="3">
       <div class="img-space">
         <ng-container *ngIf="isImageSaved; else elseTemplate">
           <img
