--- a/restaurant-front/src/modules/admin/pages/admin-dashboard/admin-dashboard.component.scss
+++ b/restaurant-front/src/modules/admin/pages/admin-dashboard/admin-dashboard.component.scss
@@ -33,6 +33,19 @@ mat-toolbar {
     align-items: start;
   }
   
+  img {
+    max-height: 800px;
+    max-width: 800px;
+    margin-left: 8px;
+    margin-bottom: 8px;
+  }
+
+  .avatar {
+    margin-top: 16px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
   
   .dugmic-back {
     color: black;
